# evidex

./: .gitignore  README.md  pyproject.toml
evidex/: __init__.py  entities.py  graph.py  ingest.py  llm.py  models.py  motivations.py  qa.py
evidex/api/: __init__.py  app.py  dependencies.py  doc_routes.py  registry.py  routes.py  schemas.py
evidex/api/routers/: __init__.py  health.py
frontend/: .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/app/documents/[id]/: page.tsx
frontend/components/: AnswerCard.tsx  PDFViewer.tsx  ParagraphItem.tsx  QuestionPanel.tsx  SectionList.tsx  index.ts
frontend/lib/: api.ts  types.ts
frontend/styles/: globals.css
tests/: test_composer.py  test_confidence.py  test_debug.py  test_doc_routes.py  test_entities.py  test_equations.py  test_evidence_linker.py  test_graph.py  test_groq_integration.py  test_ingest.py  test_ingest_validation.py  test_json_parsing.py  test_motivations.py  test_planner.py  test_qa.py
tests/api/: test_explain_integration.py  test_routes_unit.py
